fixes card alignment

--- a/src/components/NominationsCard.css
+++ b/src/components/NominationsCard.css
@@ -1,5 +1,5 @@
 .nominations {
-  width: 37.5%;
+  width: 35%;
   text-align: center;
 }
 
